--- a/ArtMarket/package.json
+++ b/ArtMarket/package.json
@@ -9,6 +9,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
