--- a/ArtMarket/package.json
+++ b/ArtMarket/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3"
   }
 }
