--- a/ArtMarket/package.json
+++ b/ArtMarket/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.6.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
     "pg": "^8.11.3"
   }
 }
